--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <h1>Enter Course Information</h1>
   <form id="courseForm">
     <label for="title">Course Title:</label>
-    <input type="text" id="title" name="title" required><br><br>
+    <select id="title" name="title" required>
+      <option value="">Select Course Title</option>
+    </select><br><br>
     <label for="topic">Topic:</label>
     <input type="text" id="topic" name="topic" required><br><br>
     <label for="content">Content:</label>
@@ -17,7 +19,9 @@
     <label for="duration">Duration (min):</label>
     <input type="number" id="duration" name="duration" required><br><br>
     <label for="presenter">Presenter:</label>
-    <input type="text" id="presenter" name="presenter" required><br><br>
+    <select id="presenter" name="presenter" multiple required>
+      <option value="">Select Presenter</option>
+    </select><br><br>
     <input type="submit" value="Submit">
   </form>
   <script src="script.js"></script>
