Add new pages: display presenters and titles

--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -21,9 +21,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
+        </li>
       </ul>
     </div>
-  </nav>
+  </nav>  
 
   <div class="container mt-4">
     <h1>Add Course Title</h1>
