--- a/pages/add-presenter.html
+++ b/pages/add-presenter.html
@@ -15,12 +15,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/pages/add-course.html">Add Course</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
         </li>
