--- a/pages/all-presenters.html
+++ b/pages/all-presenters.html
@@ -15,12 +15,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/pages/add-course.html">Add Course</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
         </li>
@@ -32,7 +32,10 @@
   </nav>  
 
   <div class="container mt-4">
-    <h1>All Presenters</h1>
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h1>All Presenters</h1>
+      <a href="/pages/add-presenter.html" class="btn btn-primary">Add New Presenter</a>
+    </div>
     <ul id="presenterList" class="list-group"></ul>
   </div>
 
