Update delete button on page

--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -63,7 +63,7 @@
       })
       .then(data => {
         alert('Title added successfully: ' + data);
-        window.location.href = '/pages/index.html'; // Redirect to main page
+        window.location.href = '/pages/all-titles.html'; // Redirect to main page
       })
       .catch(error => {
         console.error('Error:', error);
