--- a/pages/all-titles.html
+++ b/pages/all-titles.html
@@ -15,12 +15,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/pages/add-course.html">Add Course</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
         </li>
@@ -84,5 +84,8 @@
         .catch(error => console.error('Error:', error));
     }
   </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
