--- a/pages/all-presenters.html
+++ b/pages/all-presenters.html
@@ -9,7 +9,7 @@
 <body>
   <!-- menu bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/pages/index.html">Home</a>
+    <a class="navbar-brand" href="/pages/main.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
