--- a/pages/edit-presenter.html
+++ b/pages/edit-presenter.html
@@ -22,6 +22,9 @@
           <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
         </li> -->
         <li class="nav-item">
+          <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
         </li>
         <li class="nav-item">
