Update edit and delete button

--- a/pages/all-titles.html
+++ b/pages/all-titles.html
@@ -37,7 +37,7 @@
   <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h1>All Course Titles</h1>
-      <a href="/pages/add-course.html" class="btn btn-primary">Add New Course Title</a>
+      <a href="/pages/add-title.html" class="btn btn-primary">Add New Course Title</a>
     </div>
     <ul id="titleList" class="list-group"></ul>
   </div>
