--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Course Title</title>
+  <title>Course Information</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -35,47 +35,40 @@
   </nav>  
 
   <div class="container mt-4">
-    <h1>Add Course Title</h1>
-    <form id="addCourseForm">
+    <h1>Enter Course Information</h1>
+    <form id="courseForm">
       <div class="form-group">
-        <label for="courseTitle">Course Title:</label>
-        <input type="text" class="form-control" id="courseTitle" name="courseTitle" required>
+        <label for="title">Course Title:</label>
+        <select class="form-control" id="title" name="title" required>
+          <option value="">Select Course Title</option>
+        </select>
       </div>
-      <button type="submit" class="btn btn-primary">Add Title</button>
+      <div class="form-group">
+        <label for="topic">Topic:</label>
+        <input type="text" class="form-control" id="topic" name="topic" required>
+      </div>
+      <div class="form-group">
+        <label for="content">Content:</label>
+        <textarea class="form-control" id="content" name="content" rows="4" required></textarea>
+      </div>
+      <div class="form-group">
+        <label for="duration">Duration (min):</label>
+        <input type="number" class="form-control" id="duration" name="duration" min="5" max="480" required>
+        <small class="form-text text-muted">Please enter a duration between 5 and 480 minutes.</small>
+      </div>
+      <div class="form-group">
+        <label for="presenter">Presenter:</label>
+        <select class="form-control" id="presenter" name="presenter" multiple required>
+          <option value="">Select Presenter</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
 
-  <script>
-    document.getElementById('addCourseForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const courseTitle = document.getElementById('courseTitle').value;
-
-      fetch('/add-course', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ title: courseTitle }),
-      })
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        return response.text();
-      })
-      .then(data => {
-        alert('Title added successfully: ' + data);
-        window.location.href = '/pages/all-titles.html'; // Redirect to main page
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert('Failed to add title. Please try again.');
-      });
-    });
-  </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
