--- a/pages/all-courses.html
+++ b/pages/all-courses.html
@@ -9,15 +9,12 @@
 <body>
   <!-- menu bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/pages/index.html">Home</a>
+    <a class="navbar-brand" href="/pages/main.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/add-course.html">Add Course</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
         </li>
