--- a/pages/table.html
+++ b/pages/table.html
@@ -36,12 +36,59 @@
       cursor: pointer;
       box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
     }
+    .table-wrapper {
+      position: relative;
+    }
+    .remove-table-btn {
+      position: absolute;
+      left: -20px;
+      top: 10px;
+      background-color: #dc3545;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+    }
     #tables-container {
       margin-bottom: 80px; /* Add space for the floating button */
     }
   </style>
 </head>
 <body>
+  <!-- menu bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/pages/main.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="/pages/add-course.html">Add Course</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
+        </li>
+      </ul>
+    </div>
+  </nav> 
+
   <div class="container mt-4">
     <h1>訂餐與住宿統計表</h1>
     <div id="tables-container">
@@ -69,10 +116,21 @@
 
     // Add a new table
     function addTable() {
-      const tableHTML = createTableHTML(defaultRowsData);
       const tablesContainer = document.getElementById('tables-container');
       const tableElement = document.createElement('div');
-      tableElement.innerHTML = tableHTML;
+      tableElement.classList.add('table-wrapper');
+
+      // Determine if a remove button is needed
+      if (tablesContainer.children.length > 0) {
+        const removeBtn = document.createElement('button');
+        removeBtn.innerText = '-';
+        removeBtn.classList.add('remove-table-btn');
+        removeBtn.onclick = () => tableElement.remove();
+        tableElement.appendChild(removeBtn);
+      }
+
+      const tableHTML = createTableHTML(defaultRowsData);
+      tableElement.innerHTML += tableHTML;
       tablesContainer.appendChild(tableElement);
 
       // Recalculate totals for the new table
