--- a/pages/table.html
+++ b/pages/table.html
@@ -70,12 +70,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/pages/add-course.html">Add Course</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/add-presenter.html">Add Presenter</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
         </li>
@@ -85,6 +79,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
+          </li>
       </ul>
     </div>
   </nav> 
