--- a/pages/edit-course.html
+++ b/pages/edit-course.html
@@ -16,9 +16,6 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/pages/add-course.html">Add Course</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
         </li>
         <li class="nav-item">
@@ -26,6 +23,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
         </li>
       </ul>
     </div>
