--- a/pages/main.html
+++ b/pages/main.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
+        </li>
       </ul>
     </div>
   </nav>  
