--- a/pages/add-presenter.html
+++ b/pages/add-presenter.html
@@ -41,7 +41,7 @@
       })
       .then(data => {
         alert('Presenter added successfully: ' + data);
-        window.location.href = '/pages/add-new-course.html'; // Redirect to main page
+        window.location.href = 'all-presenters.html';
       })
       .catch(error => {
         console.error('Error:', error);
