--- a/pages/main.html
+++ b/pages/main.html
@@ -7,29 +7,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <!-- menu bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/pages/main.html">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
-        </li>
-      </ul>
-    </div>
-  </nav>  
+  <div id="menu-bar"></div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
