--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
+          <a class="nav-link" href="/pages/all-courses.html">Courses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
+          <a class="nav-link" href="/pages/all-titles.html">Titles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
+          <a class="nav-link" href="/pages/all-presenters.html">Presenters</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
