--- a/pages/table.html
+++ b/pages/table.html
@@ -62,29 +62,7 @@
   </style>
 </head>
 <body>
-  <!-- menu bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/pages/main.html">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-courses.html">Display All Courses</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-titles.html">Display All Titles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/all-presenters.html">Display All Presenters</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/pages/table.html">訂餐與住宿統計表</a>
-        </li>
-      </ul>
-    </div>
-  </nav> 
+  <div id="menu-bar"></div>
 
   <div class="container mt-4">
     <h1>訂餐與住宿統計表</h1>
